REGRESSION (r91540): Favicons are not loaded https://bugs.webkit.org/show_bug.cgi?id=65692

Patch by Rafael Brandao <rafael.lobo@openbossa.org> on 2011-08-06
Reviewed by Darin Adler.

The policy that evaluates whether a page can have icon or not should not
need to be reimplemented each time a new IconDatabaseBase is derived,
so it was moved to WebCore's scope.

* loader/icon/IconController.cpp:
(WebCore::IconController::startLoader):
* loader/icon/IconDatabase.cpp:
* loader/icon/IconDatabase.h:
* loader/icon/IconDatabaseBase.cpp:
(WebCore::documentCanHaveIcon):
* loader/icon/IconDatabaseBase.h:

Canonical link: https://commits.webkit.org/81646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92551 268f45cc-cd09-0410-ab3c-d52691b4dbfc