Source/WebCore/loader/icon/IconDatabase.h
@@ -136,7 +136,6 @@ private:
 public:
     virtual bool isOpen() const;
     virtual String databasePath() const;
-    virtual bool documentCanHaveIcon(const String& documentURL) const;
     static String defaultDatabaseFilename();
 
 private:
