Source/WebCore/loader/icon/IconDatabaseBase.h
@@ -165,7 +165,6 @@ public:
 
     // Used internally by WebCore
     virtual bool isEnabled() const { return false; }
-    virtual bool documentCanHaveIcon(const String&) const { return false; }
         
     virtual void retainIconForPageURL(const String&) { }
     virtual void releaseIconForPageURL(const String&) { }
@@ -216,6 +215,7 @@ public:
 // Functions to get/set the global icon database.
 IconDatabaseBase& iconDatabase();
 void setGlobalIconDatabase(IconDatabaseBase*);
+bool documentCanHaveIcon(const String&);
 
 } // namespace WebCore
 
